--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -11,22 +11,40 @@
             "cell_type": "code",
             "execution_count": null,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "ename": "NameError",
+                    "evalue": "name 'df' is not defined",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+                        "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+                        "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m load_dotenv()\n\u001b[32m      8\u001b[39m plt.figure(figsize=(\u001b[32m8\u001b[39m, \u001b[32m5\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m plt.scatter(\u001b[43mdf\u001b[49m[\u001b[33m'\u001b[39m\u001b[33mduracion_min\u001b[39m\u001b[33m'\u001b[39m], df[\u001b[33m'\u001b[39m\u001b[33mpopularidad\u001b[39m\u001b[33m'\u001b[39m], color=\u001b[33m'\u001b[39m\u001b[33mroyalblue\u001b[39m\u001b[33m'\u001b[39m, edgecolors=\u001b[33m'\u001b[39m\u001b[33mblack\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     10\u001b[39m plt.title(\u001b[33m'\u001b[39m\u001b[33mRelación entre duración y popularidad de las canciones\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m plt.xlabel(\u001b[33m'\u001b[39m\u001b[33mDuración (minutos)\u001b[39m\u001b[33m'\u001b[39m)\n",
+                        "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+                    ]
+                },
+                {
+                    "data": {
+                        "text/plain": [
+                            "<Figure size 800x500 with 0 Axes>"
+                        ]
+                    },
+                    "metadata": {},
+                    "output_type": "display_data"
+                }
+            ],
             "source": [
                 "import os\n",
                 "import pandas as pd\n",
                 "import matplotlib.pyplot as plt\n",
                 "from dotenv import load_dotenv\n",
-                "\n",
-                "# load the .env file variables\n",
-                "load_dotenv()\n",
                 "\n"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "Python 3.8.13 64-bit ('3.8.13')",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
@@ -40,14 +58,9 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.8.13"
+            "version": "3.11.4"
         },
-        "orig_nbformat": 4,
-        "vscode": {
-            "interpreter": {
-                "hash": "110cc1dee26208153f2972f08a2ad52b6a56238dc66d48e87fb757ef2996db56"
-            }
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
